# du-gui-rs

./: .gitignore  Cargo.toml  README.md  build.rs
.github/: FUNDING.yml
scripts/: bundle_linux  bundle_macos  bundle_windows
src/: about.rs  app.rs  main.rs
src/styles/: button_style.rs  layout_style.rs  mod.rs
