[package]
name = "du-gui-rs"
version = "0.1.0"
edition = "2021"

[package.metadata.bundle]
name = "FindBigFolders"
icon = ["resources/icons/fbf_icon_512x512.png"]
identifier = "com.home.findbigfolders"
copyright = "East Coast Software LLC"
category = "public.app-category.productivity"

[dependencies]
iced = { version = "0.13", features = ["tokio", "tiny-skia"] }
iced_table = "0.13.0"
dirs = "5.0"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
rfd = "0.14"
webbrowser = "1.0"
opener = "0.8.3"

[build-dependencies]
embed-manifest = "1.4.0"
